# nodedge

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  SECURITY.md  build.py  build_executable.py  deploy.py  file_version_info.txt  logging.yaml  mypy.ini  nodedge-0.2.4.spec  nodedge.spec  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_tests.txt  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
components/: flow_layout.py
data/: test.csv
demos/: demo_bode_plot_pyqtgraph.py  demo_custom_qdialog.py  demo_graphql.py  demo_json.py  demo_md_into_qt.py  demo_pqtgraph.py  demo_pyqtgraph_flowchart.py  demo_qtcharts.py  demo_qthreadpool.py  demo_qwebview.py  demo_recent_files.py  demo_scipy_transfer_function.py  demo_svg_widget.py  demos_qcombobox_with_completer.py  example_scipy_integrate.py  example_scipy_odeint.py  resizable_rectangle.py  resizable_rectangle_with_handles.py  write_read_h5_file.py
deploy/: deploy.py  nodedge.spec
doc/: build_doc.py
docs/: CNAME  README.md  _coverpage.md  _navbar.md  about.md  build_docs.py  features.md  index.html  keywords.txt  resources.md  theme_custom.css  theme_custom_dark.css  theme_simple.css  tutorials.md
docs_sphinx/: build_docs.py
examples/: rotor.json
nodedge/: .isort.cfg  __init__.py  __main__.py  ack_edge.py  ack_editor_widget.py  ack_editor_window.py  ack_graphics_edge.py  ack_graphics_node.py  ack_graphics_socket.py  ack_graphics_view.py  ack_node.py  ack_node_widget.py  ack_scene.py  ack_scene_clipboard.py  ack_scene_history.py  ack_serializable.py  ack_socket.py  action_palette.py  animated_stack_widget.py  application_styler.py  code_generator.py  connector.py  console_widget.py  drag_listbox.py  edge.py  edge_dragging.py  edge_validators.py  editor_widget.py  editor_window.py  flow_layout.py  graphics_cut_line.py  graphics_cutline.py  graphics_edge.py  graphics_node.py  graphics_node_content.py  graphics_node_title_item.py  graphics_node_title_label.py  graphics_scene.py  graphics_socket.py  graphics_splash_screen.py  (+37 more)
nodeledge/: ack_edge.py  ack_editor_widget.py  ack_editor_window.py  ack_graphics_cutline.py  ack_graphics_edge.py  ack_graphics_scene.py  ack_graphics_view.py  ack_node.py  ack_node_widget.py  ack_scene.py  ack_scene_clipboard.py  ack_scene_history.py  ack_socket.py
qss/: nodestyle.qss
requirements/: freeze_requirements.py
resources/: center_icons.py  change_icons_color.py  change_svg_properties.py  format_icons_files.py
test_fbs/: main.py
tests/: __init__.py  mdi_window_test.py  (+8 more)
(+539 files in other folders)
