[tool.poetry]
name = "nodedge"
version = "0.3.0"
description = "Graphical editor for physical modeling and simulation."
keywords = ["nodedge", "editor", "graphical-programming", "simulation", "physical-modeling", "control-systems", "dynamic-systems", "python3", "qt5", "pyside6", "platform-indenpendent", "windows", "linux", "macos"]
readme = "README.md"
authors = ["Anthony De Bortoli <anthony.debortoli@nodedge.io>", "Enrica Soria <enrica.soria@nodedge.io>"]
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
coloredlogs = ">=15.0.1"
h5py = ">=3.3.0"
PySide6 = ">=6.4.1"
PyYAML = ">=6.0"
pyqtgraph = ">=0.12.3"
asammdf = ">=6.2.0"
numpy = ">=1.24.1"
pandas = ">=1.3.3"
tables = ">=3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://www.nodedge.io"
Website = "https://nodedge.io"
Documentation = "https://nodedge.readthedocs.io/en/latest/"
Source = "https://github.com/nodedge/nodedge"
Tracker = "https://github.com/nodedge/nodedge/issues"
Donate = "https://github.com/sponsors/nodedge"

[project.scripts]
nodedge = "nodedge.__main__:main"

[tool.poetry.group.dev.dependencies]
coloredlogs = ">=15.0.1"
h5py = ">=3.3.0"
PySide6 = ">=6.4.1"
PyYAML = ">=6.0"
types-PyYAML = ">=6.0"
pyqtgraph = ">=0.12.3"
asammdf = ">=6.2.0"
numpy = ">=1.24.1"
pandas = ">=1.3.3"
tables = ">=3.6.1"
recommonmark = ">=0.7.1"
sphinx = ">=4.2.0"
sphinx-autodoc-typehints = ">=1.12.0"
sphinx-rtd-theme = ">=1.0.0"
black = ">=21.12b0"
codecov = ">=2.1.12"
flake8 = ">=4.0.1"
isort = ">=5.9.3"
mypy = ">=0.910"
pre-commit = ">=2.15.0"
pydocstyle = ">=6.1.1"
pytest = ">=7.2.0"
pytest-cov = ">=3.0.0"
pytest-mock = ">=3.6.1"
pytest-qt = ">=4.0.3"
pytest-xdist = ">=2.4.0"
pytest-xvfb = ">=2.0.0"
tox = ">=3.24.4"
bump2version = ">=1.0.1"
pillow = ">=8.4.0"
wheel = ">=0.37.0"
pyinstaller = ">=4.7.1"
pip-licenses = ">=3.4.0"
poetry = ">=1.0.0"
#twine = ">=3.7.0"
#pyinstaller-hooks-contrib = ">=2021.3"
